blockml/test/errors/02_field/e65/e65.view
view: e65
table: 1
fields:
- calculation: created
  sql: ${dim1}
  result: unk  

- dimension: dim1
  sql: 1
